change to use new japp-se-common package, update readme.md